Fix wrong height and scroll speed for pattern preview components (#30)

--- a/css-utilities/parts/block-preview.css
+++ b/css-utilities/parts/block-preview.css
@@ -10,6 +10,11 @@
 	padding: 0;
 }
 
+.block-editor-block-preview__content-iframe [style*="min-height: 100vh"],
+.block-editor-block-preview__content-iframe [style*="min-height:100vh"] {
+	min-height: 800px !important;
+}
+
 .block-editor-block-preview__content-iframe .nfd-stretch-cover-child {
 	min-height: 800px !important;
 }
